updating the data science markup file

--- a/Jupyter_Notebook.ipynb
+++ b/Jupyter_Notebook.ipynb
@@ -69,7 +69,13 @@
    "source": [
     "- bulleted item 1\n",
     "- bulleted item 2\n",
-    "- bulleted item 3"
+    "- bulleted item 3\n",
+    "\n",
+    "1. numbered item 1\n",
+    "2. numbered item 2\n",
+    "3. numbered item 3\n",
+    "\n",
+    "***"
    ]
   },
   {
